Fix overflow bug

--- a/client/MessageList.css
+++ b/client/MessageList.css
@@ -6,6 +6,7 @@
     align-items: flex-start;
     width: 75vw;
     padding: 20px;
+    overflow-y: scroll;
 }
 
 .Message {
